create invoice page modified and made a bit neater

--- a/test.html
+++ b/test.html
@@ -1,4 +1,3 @@
-<?php include('controller/edit_controller.php'); ?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,10 +14,12 @@
   <body class="bg-light">
     <ul class="nav nav-tabs bg-dark">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="../index.php">Create Invoice</a>
+        <a class="nav-link active" aria-current="page" href="index.php"
+          >Create Invoice</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="view_invoices.php">View Invoices</a>
+        <a class="nav-link" href="view/view_invoices.php">View Invoices</a>
       </li>
     </ul>
     <div class="container-sm">
@@ -34,7 +35,6 @@
       <h2>To:</h2>
       <div class="form-group col-xs-12 col-sm-4 col-md-4 col-lg-4">
         <input
-          value="<?php echo $invoice_values['business_name']; ?>"
           type="text"
           class="form-control"
           name="company_name"
@@ -43,18 +43,16 @@
           autocomplete="off"
         />
       </div>
-      <div class="form-floating col-xs-12 col-sm-4 col-md-4 col-lg-4 mt-3 mb-3">
+      <div class="form-group col-xs-12 col-sm-4 col-md-4 col-lg-4 mt-3 mb-3">
         <textarea
           class="form-control"
-          placeholder="Your Address"
+          placeholder="Your Address:"
           rows="7"
           name="address"
           id="address"
-        >
-          <?php echo $invoice_values['business_address']; ?>
-        </textarea>
+        ></textarea>
       </div>
-      <form>
+      <form class="mb-7">
         <table
           class="table table-bordered table-hover table-striped table-default"
           id="invoice_item"
@@ -69,51 +67,58 @@
             <th width="15%">Price</th>
             <th width="15%">Total</th>
           </tr>
-            <?php
-                $count = 0;
-                foreach($invoice_items as $invoice_item) {
-                    $count++;
-                }
-            ?>
           <tr>
             <td><input type="checkbox" /></td>
             <td>
-              <input type="text" value="<?php echo $invoice_item["invoice_code"]; ?>"
-              name="product_code[]" id="product_code_<?php echo $count; ?>"
-              class="form-control" autocomplete="off">
+              <input
+                type="text"
+                name="product_code[]"
+                id="product_code_1"
+                class="form-control"
+                autocomplete="off"
+              />
             </td>
             <td>
-              <input type="text" value="<?php echo $invoice_item["invoice_name"]; ?>"
-              name="product_name[]" id="product_name_<?php echo $count; ?>"
-              class="form-control" autocomplete="off">
+              <input
+                type="text"
+                name="product_name[]"
+                id="product_name_1"
+                class="form-control"
+                autocomplete="off"
+              />
             </td>
             <td>
-              <input type="number" value="<?php echo $invoice_item["quantity"]; ?>"
-              name="quantity[]" id="quantity_<?php echo $count; ?>"
-              class="form-control quantity" autocomplete="off">
+              <input
+                type="number"
+                name="quantity[]"
+                id="quantity_1"
+                class="form-control"
+                autocomplete="off"
+              />
             </td>
             <td>
-              <input type="number" value="<?php echo $invoice_item["amount"]; ?>"
-              name="price[]" id="price_<?php echo $count; ?>"
-              class="form-control price" autocomplete="off">
+              <input
+                type="number"
+                name="price[]"
+                id="price_1"
+                class="form-control"
+                autocomplete="off"
+              />
             </td>
             <td>
-              <input type="number" value="<?php echo $invoice_item["final_amount"]; ?>"
-              name="total[]" id="total_<?php echo $count; ?>"
-              class="form-control total" autocomplete="off">
+              <input
+                type="number"
+                name="total[]"
+                id="total_1"
+                class="form-control"
+                autocomplete="off"
+              />
             </td>
-            <input
-              type="hidden"
-              value="<?php echo $invoice_item['invoice_id']; ?>"
-              class="form-control"
-              name="itemId[]"
-            />
           </tr>
-          <?php } ?>
         </table>
         <div class="row">
           <div class="col-xs-12 col-sm-3 col-md-3 mb-3">
-            <button class="btn btn-danger delete" id="removeRows" type="button">
+            <button class="btn btn-danger" id="removeRows" type="button">
               - Delete
             </button>
             <button class="btn btn-primary" id="addRows" type="button">
@@ -182,7 +187,7 @@
             type="number"
             class="form-control"
             name="amount_due"
-            id="amount due"
+            id="amount_due"
             placeholder="R: Amount Due"
             autocomplete="off"
           />
@@ -196,12 +201,9 @@
                 rows="5"
                 name="notes"
                 id="notes"
-                placeholder="Your Notes"
-              >
-                <?php echo $invoice_values['note']; ?></textarea
-              >
+                placeholder="Your Notes:"
+              ></textarea>
             </div>
-
             <div class="form-group">
               <input
                 type="hidden"
@@ -242,7 +244,11 @@
           </div>
         </div>
       </form>
+      <br /><br /><br /><br />
     </div>
+    <footer class="text-white bg-dark text-center">
+      All right reserved takalani
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
